--- a/enlaces/enlaces.html
+++ b/enlaces/enlaces.html
@@ -6,8 +6,8 @@
     <body>
         <h1>Primera Pagina</h1>
         <p>Felicidades estas en la 1era pagina</p>
-        <a href="enlaces2.html">Segundo enlace</a>
-        <a href="enlaces3.html">Tercer enlace</a>
+        <a href="enlaces2.html" title="Segunda Pagina">Segundo enlace</a>
+        <a href="enlaces3.html" title="Tercera Pagina">Tercer enlace</a>
         
         <!-- Referencia de hipertexto -->
         <!-- href = "" , es una funcionalidad-->
@@ -15,6 +15,7 @@
 
         <h2>Enlaces target blank</h2>
         <a href="enlaces2.html" target="_blank"> Segundo enlace</a>
-        <!--  target="_self" = Que se habra en otra pestaña -->
+        <!--  target="_blank" = Que se habra en otra pestaña -->
+        <!-- tittle = " Cuando pasas mouse, aparece, mayormente para imagenes y enlaces"-->
     </body>
 </html>
