--- a/img.html
+++ b/img.html
@@ -4,6 +4,8 @@
         <title>Imagenes</title>
     </head>
     <body>
-
+        <img src="imagenes/auron.png" alt="Auronplay">
+        <!-- img src=""    para llamar imagenes--> 
+        <!-- alt =""   alternativo para llamar a las imagenes, aparece cuando la imagen falla -->
     </body>
 </html>
