--- a/clases_CSS/propiedades_texto/index.html
+++ b/clases_CSS/propiedades_texto/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1> Gian Marco </h1>
+    <h1> Castañeda Caycho Gian Marco </h1>
         <p>
             Soy estudiante 8tavo ciclo, Ingenieria de Sistemas
         </p>
