--- a/clases_CSS/propiedades_texto/index.html
+++ b/clases_CSS/propiedades_texto/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1> Castañeda Caycho Gian Marco </h1>
         <p>
-            Soy estudiante 8tavo ciclo, Ingenieria de Sistemas
+            Soy estudiante 8tavo ciclo, <span>Ingenieria de Sistemas</span>
         </p>
 </body>
 </html>
