--- a/clases_CSS/propiedades_texto/index.html
+++ b/clases_CSS/propiedades_texto/index.html
@@ -3,11 +3,27 @@
 <head>
     <title>Propiedades de texto</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="font.css">
+
+    <!--Tipografias externas (Encontrar en Google Fonts y colocar el enlace en esta parte, y luego llamarlo en el CSS en el font-family: xxxxxx)-->
+
 </head>
 <body>
     <h1> Castañeda Caycho Gian Marco </h1>
-        <p>
-            Soy estudiante 8tavo ciclo, <span>Ingenieria de Sistemas</span>
+    <p>
+        Soy estudiante 8tavo ciclo en la universidad de Cañete, de la carrera de <span>Ingenieria de Sistemas</span>.
+        Tengo 20 años.
         </p>
+
+    <a href="https://youtube.com">Youtube</a>
 </body>
 </html>
+
+<!--/* Modelo de cajas, BOX MODEL -> cajas con 4 propiedades fundamentales; como se deberia colocar los elementos en el HTML, que son cajas rectangulares*/-->
+
+<!-- Contenido (content) -> nucelo, area del texto, imagenes-->
+<!--Contenido de la caja (padding) relleno -> borde entre el contenido y el borde de la caja-->
+<!-- border -> linea que rodea el contenido y el padding; estilo grosor y color del borde. Border width tamaño de borde, Border radius redondeo radio-->
+<!--Margen (margin) -> esta fuera del borde, este espacio separa el elemento de otros elementos de la pagina, no forma parte la caja --> 
+<!-- Width y heigth para el contenido-->
+<!--box sizing, definir las propiedas entre si-->
